--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -115,7 +115,6 @@
   }
   .header-label {
       height: 50px;
-      width: 400px;
       color: #241F20;
       font-family: Helvetica;
       font-size: 48px;
@@ -151,7 +150,24 @@
     width:300px;
     font-weight: bold;
   }
+  .add-to-case table{
+    text-align: left;
+    margin-bottom: 50px;
+    cellspacing: 0;
+    border-collapse:collapse;
+  }
   
+  .add-to-case tr {
+    height: 50px;
+  }
+  .add-to-case th {
+    font-size:19px;
+  }
+  .add-to-case td:nth-child(1), .deal th:nth-child(1) {
+    width:100px;
+    font-weight: bold;
+  }
+
   .pricing table {
     width: 100%;
     text-align: left;
