--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
   <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-full case-summary">
-      <table style="margin:10px">
+      <table>
         <tr>
           <th>
             <p class="header-label" style="color: white;">C0345</p>
@@ -56,7 +56,8 @@
 {% endblock %}
 
 {% block content %}
-<div class="tfm tfm-width" style="margin:10px;">
+<div class="govuk-grid-row tfm tfm-width" >
+  <div class="govuk-grid-column-full">
   {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
 
   {{ mojSubNavigation({
@@ -91,8 +92,9 @@
   active: selected=='credit-analysis'
   }]
   }) }}
+ </div> 
+ </div>
 
   {% block sub_content %}
   {% endblock %}
- </div> 
       {% endblock %}
