--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/cases">Trade Finance Manager</a>
+          <a href="/inbox">Trade Finance Manager</a>
         </li>
         <li>
           <a href="https://design-system.service.gov.uk">GOV.UK Design System</a>
