--- a/app/views/cases/credit-analysis/bank-relationship.html
+++ b/app/views/cases/credit-analysis/bank-relationship.html
@@ -11,7 +11,7 @@
   items: [
     {
       text: "C0345",
-      href: "tasks"
+      href: "/cases/tasks"
     },
     {
       text: "credit analysis",
