--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -1,35 +1,39 @@
 {% extends "layout.html" %}
 {% block beforeContent %}
-<div style="margin:10px;">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
 
-{{ govukBreadcrumbs({
-  items: [
-    {
-      text: "C0345",
-      href: "tasks"
-    },
-    {
-      text: "pricing",
-      href: "/cases/pricing"
-    },
-    {
-      text: "loss given default"
-    }
-  ]
-}) }}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "C0345",
+        href: "/cases/tasks"
+      },
+      {
+        text: "pricing",
+        href: "/cases/pricing"
+      },
+      {
+        text: "loss given default"
+      }
+    ]
+  }) }}
+  </div>
 </div>
-
 {% endblock %}
 {% block content %}
-    <div class="govuk-form-group tfm" style="margin-left:20px;">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <div class="govuk-form-group tfm">
     <h1>What is the loss given default?</h1>
 <span class="moj-label__currency">%</span>
 <input class="govuk-input moj-input__currency govuk-input--width-5" id="amount-1" name="amount" type="text" autocomplete="off" pattern="[0-9]*" >
 </input>
 </div> 
-
+  </div>
+</div>
     <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-one-quarter flex-container" style="margin: 10px;">
+      <div class="govuk-grid-column-one-quarter flex-container">
         <a class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</a>
         <a href="/cases/pricing" style="margin: 10px;">Cancel</a>
       </div>
