--- a/app/views/inbox/add-to-existing-case.html
+++ b/app/views/inbox/add-to-existing-case.html
@@ -77,7 +77,7 @@
 </div>
 </div>
     <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-one-third flex-container" style="margin: 10px;">
+      <div class="govuk-grid-column-one-third flex-container">
         <a class="govuk-button" data-module="govuk-button" href="/cases/tasks">Continue</a>
         <a href="/inbox" class="cancel-link">Cancel</a>
       </div>
