--- a/app/views/cases/credit-analysis/add-a-facility.html
+++ b/app/views/cases/credit-analysis/add-a-facility.html
@@ -6,7 +6,7 @@
   items: [
     {
       text: "C0345",
-      href: "tasks"
+      href: "/cases/tasks"
     },
     {
       text: "credit analysis",
