--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -9,7 +9,7 @@
   items: [
     {
       text: "C0345",
-      href: "tasks"
+      href: "/cases/tasks"
     },
     {
       text: "credit analysis",
