--- a/app/views/cases/pricing/credit-rating.html
+++ b/app/views/cases/pricing/credit-rating.html
@@ -1,30 +1,28 @@
 {% extends 'layout.html' %}
 {% block beforeContent %}
-<div style="margin:10px;">
-
-{{ govukBreadcrumbs({
-  items: [
-    {
-      text: "C0345",
-      href: "tasks"
-    },
-    {
-      text: "pricing",
-      href: "/cases/pricing"
-    },
-    {
-      text: "credit rating"
-    }
-  ]
-}) }}
+<div class="govuk-grid-row tfm tfm-width">
+  <div class="govuk-grid-column-full">
+    {{ govukBreadcrumbs({
+      items: [
+        {
+          text: "C0345",
+          href: "/cases/tasks"
+        },
+        {
+          text: "pricing",
+          href: "/cases/pricing"
+        },
+        {
+          text: "credit rating"
+        }
+      ]
+    }) }}
+  </div>
 </div>
-
 {% endblock %}
 {% block content %}
   <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-half" style="margin: 20px;">
-{% from "govuk/components/radios/macro.njk" import govukRadios %}
-
+      <div class="govuk-grid-column-full">
         {{ govukRadios({
         idPrefix: "changed-name",
         name: "changed-name",
@@ -53,9 +51,9 @@
       </div>
   </div>
     <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-one-quarter flex-container" style="margin: 10px;">
-        <button class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</button>
-        <a href="/cases/pricing" style="margin: 10px;">Cancel</a>
+      <div class="govuk-grid-column-one-quarter flex-container">
+        <a class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</a>
+        <a href="/cases/pricing" class="cancel-link">Cancel</a>
       </div>
     </div>
 {% endblock %}
