--- a/app/views/inbox/create_case.html
+++ b/app/views/inbox/create_case.html
@@ -1,32 +1,36 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="govuk-grid-row">
+<div class="govuk-grid-row tfm">
   <div class="govuk-grid-column-full">
-<p class="header-label">Create a case</p>
-<p>Confirm you want to create a new case for the following manual inclusion application.</p>
+    <p class="header-label">Create a case</p>
+    <p>Confirm you want to create a new case for the following manual inclusion application.</p>
 
-<table  class="govuk-table tfm tfm-width" >
-<tbody class="govuk-table__body">
-<tr class="govuk-table__row">
-    <td class="govuk-table__cell"></td>
-    <td class="govuk-table__cell"></td>
-    <td class="govuk-table__cell"></td>
-    <td class="govuk-table__cell"></td>
-    <td class="govuk-table__cell"></td>
-    <td class="govuk-table__cell"></td>
-</tr>
-<tr class="govuk-table__row">
-    <td class="govuk-table__cell">0020010552</td>
-    <td class="govuk-table__cell">Love to Learn Ltd</td>
-    <td class="govuk-table__cell">Kingdom of Wakanda Colleg...</td>
-    <td class="govuk-table__cell">Education</td>
-    <td class="govuk-table__cell">LLoyds bank</td>
-    <td class="govuk-table__cell">16 Dec 2019</td>
-</tr>
-</tbody>
-</table>
-        <a class="govuk-button" data-module="govuk-button" href="/cases/tasks">Confirm and continue</a>
-        <a href="/inbox" style="margin: 10px;">Cancel</a>
-      </div>
-    </div>
+    <table  class="govuk-table tfm tfm-width" >
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell"></td>
+            <td class="govuk-table__cell"></td>
+            <td class="govuk-table__cell"></td>
+            <td class="govuk-table__cell"></td>
+            <td class="govuk-table__cell"></td>
+            <td class="govuk-table__cell"></td>
+        </tr>
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">0020010552</td>
+            <td class="govuk-table__cell">Love to Learn Ltd</td>
+            <td class="govuk-table__cell">Kingdom of Wakanda Colleg...</td>
+            <td class="govuk-table__cell">Education</td>
+            <td class="govuk-table__cell">LLoyds bank</td>
+            <td class="govuk-table__cell">16 Dec 2019</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="govuk-grid-row tfm tfm-width">
+  <div class ="govuk-grid-column-two-thirds  flex-container">   
+    <a class="govuk-button" data-module="govuk-button" href="/cases/tasks">Confirm and continue</a>
+    <a href="/inbox" class="cancel-link">Cancel</a>
+</div>
+</div>
 {% endblock%}
