css fixes credit analysis

--- a/app/views/cases/credit-analysis/existing-facility.html
+++ b/app/views/cases/credit-analysis/existing-facility.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block beforeContent %}
-<div style="margin:10px;">
-
+<div class="govuk-grid-row tfm tfm-width existing-facility">
+  <div class="govuk-grid-column-full" style="margin-left: 0 50px">
 {{ govukBreadcrumbs({
   items: [
     {
@@ -18,11 +18,11 @@
   ]
 }) }}
 </div>
-
+</div>
 {% endblock %}
 {% block content %}
 <div class="govuk-grid-row tfm tfm-width existing-facility">
-  <div class="govuk-grid-column-full" style="margin-left: 0 50px">
+  <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl">Existing facilities with banks and other organisations</h1>
     <h2>The exporter's existing facilities</h2>
     <table>
@@ -75,9 +75,11 @@
       <td><a href="#">Remove</a></td>
     </tr>
     </table>
-
+</div>
+</div>
 {% from "moj/components/button-menu/macro.njk" import mojButtonMenu %}
-
+<div class="govuk-grid-row tfm tfm-width">
+  <div class="govuk-grid-column-full">
 {{ mojButtonMenu({
 items: [{
 text: "Add a facility",
@@ -85,6 +87,10 @@ href: "/cases/credit-analysis/add-a-facility",
 classes: "govuk-button--secondary"
 }]
 }) }} 
+</div>
+</div>
+<div class="govuk-grid-row tfm ">
+  <div class="govuk-grid-column-full">
 {{ mojButtonMenu({
 items: [{
 text: "Save and back to credit analysis",
