--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -3,8 +3,8 @@
  {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
 {% block beforeContent %}
-<div style="margin:10px;">
-
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full">
 {{ govukBreadcrumbs({
   items: [
     {
@@ -21,11 +21,11 @@
   ]
 }) }}
 </div>
-
+</div>
 {% endblock %}
 {% block content %}
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds" style="margin: 0 220px">
+        <div class="govuk-grid-column-two-thirds">
 
             <h1 class="govuk-heading-xl">About the export</h1>
 
@@ -78,7 +78,7 @@ classes: 'govuk-label'
         </div>
     </div>
         <div class="govuk-grid-row">
-        <div class="govuk-grid-column-three-quarters" style="margin:-20px 220px">
+        <div class="govuk-grid-column-three-quarters">
 {% from "moj/components/button-menu/macro.njk" import mojButtonMenu %}
 
 {{ mojButtonMenu({
@@ -91,7 +91,7 @@ href: "/cases/credit-analysis/bank-relationship",
 classes: "govuk-button--secondary"
 }, {
 text: "Cancel",
-href: "#",
+href: "/cases/credit-analysis",
 classes: "govuk-link"
 }]
 }) }} 
