--- a/app/views/cases/exposure/pricing-check.html
+++ b/app/views/cases/exposure/pricing-check.html
@@ -29,7 +29,7 @@
   name: "confirm-exposure-level-acceptance",
   fieldset: {
     legend: {
-      text: "Are yoyu happy with the level of exposure this case will add?",
+      text: "Are you happy with the level of exposure this case will add?",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--l"
     }
