DTFS2-1890: When on the Inbox screen, ‘Inbox’ needs a line under it to indicate you’re on that page.

--- a/app/views/inbox/index.html
+++ b/app/views/inbox/index.html
@@ -1,4 +1,6 @@
 {% extends 'layout.html' %}
+{% set primary = 'inbox' %}
+
 {% block content %}
 {% set primary = 'inbox' %}
 <div class="govuk-grid-row tfm tfm-width">
