remove nav bar from pages with bread crumbs.

--- a/app/views/inbox/create_case.html
+++ b/app/views/inbox/create_case.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %}
+{% extends "layout_navbar.html" %}
+{% set primary = 'inbox' %}
 {% block content %}
 <div class="govuk-grid-row tfm">
   <div class="govuk-grid-column-full">
