--- a/app/views/inbox/add-to-existing-case.html
+++ b/app/views/inbox/add-to-existing-case.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %}
+{% extends "layout_navbar.html" %}
+{% set primary = 'inbox' %}
+
 {% block content %}
     <div class="govuk-grid-row tfm">
       <div class="govuk-grid-column-full">
