DTFS2-1892: Update the content on the Exposure check screen to match design

--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -9,11 +9,11 @@
       </div>
   </div>
       <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-three-quarters separator-line pricing">
+      <div class="govuk-grid-column-three-quarters pricing moj-task-list__items">
         <h2>Exposure check</h2>
         <table>
           <tr>
-            <td colspan="3" style="font-size:19px;"><a href="/cases/exposure/pricing-check">Are you satisfied with the level of exposure this case will add?</a></td>
+            <td colspan="3" class="moj-class-list__item"><a href="/cases/exposure/exposure-check">Are you satisfied with the level of exposure this case will add?</a></td>
             <td/>
             <td/>
             <td style="width:80px"><span class="label--blue">TO DO</span></td>
