--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -147,7 +147,7 @@
   .cancel-link {
       font-size: 19px;
       margin:8px 20px;
-      vertical-align: middle;
+      display: flex;
   }
   .header-label {
       height: 50px;
