--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -344,7 +344,9 @@
 .govuk-grid-column-two-thirds, 
 .govuk-grid-column-three-quarters, 
 .govuk-grid-column-one-quarter,
-.govuk-grid-column-one-third {
+.govuk-grid-column-one-third,
+.govuk-grid-column-one-half
+ {
   padding: 0 30px;
 }
 
