--- a/app/views/cases/exposure/exposure-check.html
+++ b/app/views/cases/exposure/exposure-check.html
@@ -21,43 +21,57 @@
 </div>
 {% endblock %}
 {% block content %}
-    
-    {% from "govuk/components/radios/macro.njk" import govukRadios %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
-  {{ govukRadios({
-  classes: "govuk-radios--inline",
-  idPrefix: "confirm-exposure-level-acceptance",
-  name: "confirm-exposure-level-acceptance",
-  fieldset: {
-    legend: {
-      text: "Are you happy with the level of exposure this case will add?",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--xl"
-    }
-  },
-  items: [
-    {
-      value: "yes",
-      text: "Yes"
-    },
-    {
-      value: "no",
-      text: "No"
-    }
-  ]
-}) }}
+  <form action="/cases/exposure" method="post" class="form">
+    <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              <h1 class="govuk-fieldset__heading">
+                Are you happy with the level of exposure this case will add?
+              </h1>
+            </legend>
+            <div class="govuk-radios govuk-radios--inline">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="exposure-happy-no" name="exposure-happy" type="radio" value="yes" {{ checked("exposure-happy", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="exposure-happy-yes">
+                  Yes
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="exposure-happy-no" name="exposure-happy" type="radio" value="no" {{ checked("exposure-happy", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="exposure-happy-no">
+                  No
+                </label>
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+
+<div class="govuk-grid-row tfm tfm-width">
+  <div class="govuk-grid-column-one-half">
+
+      <h1 class="govuk-label-wrapper">
+        <label class="govuk-label govuk-label--m" for="exposure-happy-comment">
+        Comments
+        </label>
+      </h1>
+    <textarea class="govuk-textarea" value="{{ data['exposure-happy-comment'] }}" type="text" id="exposure-happy-cmt" name="exposure-happy-comment" rows="5" aria-describedby="more-detail-hint" >{{ data['exposure-happy-comment'] }}</textarea>
+  </div>
 </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full  flex-container" style="display: float;">
-        <a href="/cases/exposure" role="button" draggable="false" class="govuk-button">
-        Save
-        </a>
+
+    <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-full flex-container">
+      <button class="govuk-button" data-module="govuk-button">Save</button>
         <a href="/cases/exposure" class="cancel-link ">
         Cancel
         </a>
+      </div>
     </div>
-</div> 
+  </form>
+
+
 
 {% endblock %}
