Removed brackets from SAR values as they indicate negative values.

--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -153,14 +153,14 @@
           <td>9 mths</td>
           <td>31 Aug 2020</td>
           <td>GBP 3,468,195.18</td>
-          <td>(SAR 17,346,525.00)</td>
+          <td>(SAR) 17,346,525.00</td>
           <td>GBP 2,774,566.14 (80%)</td>
           <td>2.45%</td>       
         </tr>
         <tr style="font-weight: bold">
           <td colspan="6">Totals</td>
           <td>GBP 3,468,195.18</td>
-          <td>(SAR 17,346,525.00)</td>
+          <td>(SAR) 17,346,525.00</td>
           <td>GBP 2,774,566.14 (80%)</td>
           <td></td>   
         </tr>
@@ -196,7 +196,7 @@
           <td>9 mths</td>
           <td>31 Aug 2020</td>
           <td>GBP 3,468,195.18</td>
-          <td>(SAR 17,346,525.00)</td>
+          <td>(SAR) 17,346,525.00</td>
           <td>GBP 2,774,566.14 (80%)</td>
           <td>2.45%</td>       
         </tr>
@@ -213,7 +213,7 @@
           <td>9 mths</td>
           <td>31 Aug 2020</td>
           <td>GBP 3,468,195.18</td>
-          <td>(SAR 17,346,525.00)</td>
+          <td>(SAR) 17,346,525.00</td>
           <td>GBP 2,774,566.14 (80%)</td>
           <td>2.45%</td>       
         </tr>
@@ -225,7 +225,7 @@
           <td></td>
           <td></td>
           <td>GBP 3,468,195.18</td>
-          <td>(SAR 17,346,525.00)</td>
+          <td>(SAR) 17,346,525.00</td>
           <td>GBP 2,774,566.14 (80%)</td>
           <td></td>   
         </tr>
