--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -283,16 +283,16 @@
 }
 
 .label--green {
-    background: #00703c;
-    color: #FFF;
+    background: #CCE2D9;
+    color: #005A30;
     display: inline-block;
     line-height: 1;
-    padding: 4px 5px 3px 5px;
+    padding: 4px 10px 3px 10px;
     margin: 0 calc(2 * #{5px}) 5px 5px;
     text-align: left;
     text-decoration: none;
     font-size: 1rem;
-    font-weight: normal;
+    font-weight: bold;
 
 }
 
@@ -310,16 +310,16 @@
 }
 
 .label--red {
-      background: #B10E1E;
-    color: #FFF;
+    background: #f6d7d2;
+    color: #942514;
     display: inline-block;
     line-height: 1;
-    padding: 4px 5px 3px 5px;
+    padding: 4px 10px 3px 10px;
     margin: 0 calc(2 * #{5px}) 5px 5px;
     text-align: left;
     text-decoration: none;
     font-size: 1rem;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 @media (max-width: 641px) {
