--- a/app/views/cases/pricing/interest-margin.html
+++ b/app/views/cases/pricing/interest-margin.html
@@ -21,20 +21,22 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-form-group tfm">
-    <h1>What interest margin is the bank charging?</h1>
-<span class="moj-label__currency">%</span>
-<input class="govuk-input moj-input__currency govuk-input--width-5" id="amount-1" name="amount" type="text" autocomplete="off" pattern="[0-9]*" >
-</input>
-</div> 
-</div>
-</div>
-    <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-one-quarter flex-container">
-        <a class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</button>
-        <a href="/cases/pricing" style="margin: 10px;">Cancel</a>
-      </div>
+<form action="/cases/pricing" method="post" class="form">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      <div class="govuk-form-group tfm">
+      <h1>What interest margin is the bank charging?</h1>
+      <span class="moj-label__currency">%</span>
+      <input class="govuk-input moj-input__currency govuk-input--width-5" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="text" autocomplete="off" pattern="[0-9]*" >
+      </input>
+      </div> 
     </div>
+  </div>
+  <div class="govuk-grid-row tfm tfm-width">
+    <div class="govuk-grid-column-one-quarter flex-container">
+      <button class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</button>
+      <a href="/cases/pricing" class="cancel-link">Cancel</a>
+    </div>
+  </div>
+</form>
 {% endblock %}
