DTFS2-1901: Loss given default - Ensure that values entered or modified are then reflected on the pricing page

--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -22,20 +22,22 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-form-group tfm">
-    <h1>What is the loss given default?</h1>
-<span class="moj-label__currency">%</span>
-<input class="govuk-input moj-input__currency govuk-input--width-5" id="amount-1" name="amount" type="text" autocomplete="off" pattern="[0-9]*" >
-</input>
-</div> 
-  </div>
-</div>
-    <div class="govuk-grid-row tfm tfm-width">
-      <div class="govuk-grid-column-one-quarter flex-container">
-        <a class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</a>
-        <a href="/cases/pricing" style="margin: 10px;">Cancel</a>
-      </div>
+<form action="/cases/pricing" method="post" class="form">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      <div class="govuk-form-group tfm">
+        <h1>What is the loss given default?</h1>
+        <span class="moj-label__currency">%</span>
+        <input class="govuk-input moj-input__currency govuk-input--width-5" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="text" autocomplete="off" pattern="[0-9]*" >
+        </input>
+      </div> 
     </div>
+  </div>
+  <div class="govuk-grid-row tfm tfm-width">
+    <div class="govuk-grid-column-one-quarter flex-container">
+      <button class="govuk-button" data-module="govuk-button">Save</button>
+      <a href="/cases/pricing" class="cancel-link">Cancel</a>
+    </div>
+  </div>
+</form>
 {% endblock %}
