DTFS2-1900: Risk profile - Ensure that values entered or modified are then reflected on the Pricing page

--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -13,7 +13,7 @@
           <tr>
             <th>Facility Id</th>
             <th>Guarantee type</th>
-            <th>Bank's interest marging</th>
+            <th>Bank's interest margin</th>
             <th>Required interest margin</th>
             <th>Interest margin is</th>
             <th/>
@@ -44,7 +44,7 @@
           <tr>
             <td><a href="#">0020010552</a></td>
             <td>BSS</td>
-            <td>Flat</td>
+            <td>{{ data['risk-profile'] }}</td>
             <td/>
             <td/>
             <td><a href="/cases/pricing/risk-profile">Change</a></td>
