DTFS2-1897: Increase font size for Credit rating task.

--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -57,7 +57,7 @@
         <h2>Credit rating</h2>
         <table>
           <tr>
-            <td colspan="3"><a href="/cases/pricing/credit-rating.html">Select a risk rating for this case</a></td>
+            <td colspan="3"><a href="/cases/pricing/credit-rating.html" class="govuk-link" style="font-size:19px;">Select a risk rating for this case</a></td>
             <td/>
             <td/>
             <td style="width:80px"><span class="label--blue">TO DO</span></td>
