--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -134,6 +134,7 @@
   }
   .tfm a {
     color: #086CBD;
+    font-size: 19px;
   }
   .tfm-width {
     width: 1440px;
@@ -149,6 +150,7 @@
       margin:8px 20px;
       display: flex;
   }
+
   .header-label {
       height: 50px;
       color: #241F20;
